<resources>
    <string name="app_name">Employees Manager</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_one_of_your_email">Enter one of your emails</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account</string>
    <string name="signup">Sign up</string>
    <string name="welcome_message">Welcome to YAT</string>
    <string name="remember_me">Remember me</string>
    <string name="please_enter_email">Please Enter email</string>
    <string name="please_enter_password">Please Enter password</string>
    <string name="password_should_be_greater">Password should be greater that 8 characters</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="salary">Salary</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_valid_employee_data">Add valid employee data</string>
    <string name="select_option">Select Option</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="please_allow_storage_permission_to_open_gallery">Please allow storage permission to open gallery</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_allow_camera_permission">Please allow Camera permission to take a photo</string>
    <string name="please_wait">Please wait…</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="employee_added">Employee Added</string>
    <string name="no_employees_saved">No employees saved</string>
    <string name="logout">Logout</string>
</resources>