<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_start"
    android:paddingEnd="@dimen/margin_end"
    android:background="@color/screen_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/employeeImage"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:src="@drawable/icon_add_image" />

        <EditText
            android:id="@+id/employeeNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/employeePositionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/position"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/employeeAgeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/age"
            android:inputType="numberSigned"
            android:maxLength="2" />

        <EditText
            android:id="@+id/employeePhoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/employeeSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/salary"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/addEmployeeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/button_color"
            android:padding="@dimen/button_padding"
            android:text="@string/add_employee" />
    </LinearLayout>
</ScrollView>