<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color">

    <ImageView
        android:id="@+id/addUserImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/icon_add_image"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_below="@id/addUserImage"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="20dp"
        android:id="@+id/alreadyHaveAccountBtn"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/alreadyHaveAccountBtn"
        android:layout_below="@id/passwordEditText"/>

</RelativeLayout>